k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app-container
          image: 975049982271.dkr.ecr.us-east-1.amazonaws.com/tc-fiap-50:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "256Mi"
          ports:
            - containerPort: 8080
